# ziggybot

./: .gitignore  CMakeLists.txt
include/: ZiggyBot.h
include/config/: Config.h
include/handlers/: CommandHandler.h
include/handlers/command/: Commands.h
include/handlers/command/ban/: Ban.h
include/utils/: MessageUtils.h  TimeUtils.h
src/: ZiggyBot.cpp  main.cpp
src/config/: Config.cpp.in  config.cpp.in
src/handlers/command/ban/: Ban.cpp
src/utils/: MessageUtils.cpp  TimeUtils.cpp
